--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -138,6 +138,7 @@
     async function getResultExpenses(data) {
       const resultExpenses = await fetch(URL, {
         method: 'POST',
+        mode: 'no-cors',
         headers: {
           "Content-Type": "application/json",
           'Access-Control-Allow-Origin': '*',
