[fix] update API endpoint URL in index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -131,7 +131,7 @@
   <script>
     const formEl = document.querySelector('form')
     const resultEl = document.querySelector('.result__text')
-    const URL = 'http://127.0.0.1:8080/expenses'
+    const URL = 'http://127.0.0.1:5000/classify'
 
     formEl.addEventListener('submit', handleSubmit)
 
