[feat] Add greeting endpoint and update expense label with emoji

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -115,7 +115,7 @@
       <section class="form__wrapper">
         <form action="">
           <label for="expenses">
-            <span>Tus gastos al mes: </span>
+            <span>Tus gastos al mes: 🐒</span>
             <input type="number" max="90000" min="100" name="expenses" id="expenses" autofocus placeholder="8000">
           </label>
           <button>Enviar</button>
